name:                implicit
version:             0.1
synopsis:            Named and unnamed implicit parameters with defaults.
license:             BSD3
license-file:        LICENSE
author:              Shane O'Brien
maintainer:          shane@duairc.com
stability:           Experimental
category:            Data
cabal-version:       >= 1.2
build-type:          Simple

extra-source-files:
  CONTRIBUTORS,
  LICENSE

Library
  hs-source-dirs:
    src

  exposed-modules:
    Data.Implicit

  build-depends:
    base >= 4.5 && < 5,
    data-default > 0.2 && < 1

  ghc-options: -O2